Add div title to homepage

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://kit.fontawesome.com/4b8fe0d7fd.js" crossorigin="anonymous"></script>
     <title>Famous Quotes</title>
   </head>
   <body>
